# cargo-junit

./: .gitignore  Cargo.toml  README.md
src/: args.rs  cargo.rs  main.rs
