[package]
name = "cargo-junit"
version = "0.7.0"
authors = ["Connor Wood <connorwood71@gmail.com>"]
keywords = ["test", "cargo", "junit", "jenkins"]
license = "MIT"
repository = "https://github.com/CWood1/cargo-junit"
description = "Converts cargo test output into a junit report. Hard forked from cargo-test-junit, after it went unmaintained with critical bugs."

[dependencies]
test-to-vec = "0.4.3"
nom = "3.2.1"
duct = "0.11.1"
sxd-document = "0.2.0"
clap = "2.19.2"
