[package]
name = "cargo-junit"
version = "0.8.0"
authors = ["Connor Wood <connorwood71@gmail.com>"]
keywords = ["test", "cargo", "junit", "jenkins"]
license = "MIT"
repository = "https://github.com/CWood1/cargo-junit"
description = "Converts cargo test output into a junit report. Hard forked from cargo-test-junit, after it went unmaintained with critical bugs."

[dependencies]
cargo-results = "0.6.0"
nom = "3.2.1"
duct = "0.11.1"
sxd-document = "0.2.0"
clap = "2.19.2"
time = "0.1"
